# arnoldi

./: CMakeLists.txt  main.cpp  note2.ipynb
.ipynb_checkpoints/: note-checkpoint.ipynb  note2-checkpoint.ipynb
OpenBLAS/lib/: libopenblas.so.0
OpenBLAS/lib/pkgconfig/: openblas.pc
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/11/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/12/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/13/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/14/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/15/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/16/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/17/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/18/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/19/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1A/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1B/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1C/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1D/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1E/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1F/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1G/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1H/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1J/: A.txt
lagrange-ng-regression/100taxa_5regions_1workers_1tpw/1K/: A.txt
(+392 files in other folders)
